--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,70 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
-  margin: 0;
-  padding: 20px;
-  max-width: 600px;
+}
+
+.choose--input {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+.send--input {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 30px;
+}
+
+#files {
+  display: flex;
+  flex-direction: column;
   margin: auto;
+  margin-top: 20px;
+}
+
+#name {
+  width: 500px;
+  height: 30px;
+  margin: auto;
+  margin-top: 20px;
+}
+#name--button {
+  width: 100px;
+  height: 20px;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.default__card,
+.renamed__card {
+  width: 300px;
+  height: 300px;
+  background-color: #fefefe;
+  border: 2px solid;
+  border-radius: 10px;
+  padding: 5px;
+  margin: auto;
+  max-width: 300px;
+  margin-top: 50px;
+}
+
+.default__name,
+.renamed__name {
+  word-break: break-all;
+  margin-top: 5px;
+  padding: 5px;
+}
+
+.cards__wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+h1 {
+  text-align: center;
 }
